[package]
name        = "yazi-plugin"
version     = "26.2.2"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi plugin system"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-adapter  = { path = "../yazi-adapter", version = "26.2.2" }
yazi-binding  = { path = "../yazi-binding", version = "26.2.2" }
yazi-boot     = { path = "../yazi-boot", version = "26.2.2" }
yazi-config   = { path = "../yazi-config", version = "26.2.2" }
yazi-dds      = { path = "../yazi-dds", version = "26.2.2" }
yazi-emulator = { path = "../yazi-emulator", version = "26.2.2" }
yazi-fs       = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro    = { path = "../yazi-macro", version = "26.2.2" }
yazi-parser   = { path = "../yazi-parser", version = "26.2.2" }
yazi-proxy    = { path = "../yazi-proxy", version = "26.2.2" }
yazi-shared   = { path = "../yazi-shared", version = "26.2.2" }
yazi-shim     = { path = "../yazi-shim", version = "26.2.2" }
yazi-term     = { path = "../yazi-term", version = "26.2.2" }
yazi-vfs      = { path = "../yazi-vfs", version = "26.2.2" }
yazi-widgets  = { path = "../yazi-widgets", version = "26.2.2" }

# External dependencies
anyhow        = { workspace = true }
futures       = { workspace = true }
hashbrown     = { workspace = true }
mlua          = { workspace = true }
parking_lot   = { workspace = true }
paste         = { workspace = true }
ratatui       = { workspace = true }
serde_json    = { workspace = true }
syntect       = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
twox-hash     = { workspace = true }
unicode-width = { workspace = true }
yazi-prebuilt = "0.1.0"

[target."cfg(unix)".dependencies]
libc  = { workspace = true }
uzers = { workspace = true }

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_System_JobObjects" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
