[package]
name        = "yazi-proxy"
version     = "26.2.2"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi event proxy"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.2.2" }
yazi-config  = { path = "../yazi-config", version = "26.2.2" }
yazi-macro   = { path = "../yazi-macro", version = "26.2.2" }
yazi-parser  = { path = "../yazi-parser", version = "26.2.2" }
yazi-shared  = { path = "../yazi-shared", version = "26.2.2" }
yazi-widgets = { path = "../yazi-widgets", version = "26.2.2" }

# External dependencies
tokio = { workspace = true }
