[package]
name        = "yazi-scheduler"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi task scheduler"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.1.4" }
yazi-config  = { path = "../yazi-config", version = "26.1.4" }
yazi-dds     = { path = "../yazi-dds", version = "26.1.4" }
yazi-fs      = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro   = { path = "../yazi-macro", version = "26.1.4" }
yazi-parser  = { path = "../yazi-parser", version = "26.1.4" }
yazi-plugin  = { path = "../yazi-plugin", version = "26.1.4" }
yazi-proxy   = { path = "../yazi-proxy", version = "26.1.4" }
yazi-shared  = { path = "../yazi-shared", version = "26.1.4" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.1.4" }

# External dependencies
anyhow                 = { workspace = true }
async-priority-channel = "0.2.0"
foldhash               = { workspace = true }
hashbrown              = { workspace = true }
lru                    = { workspace = true }
mlua                   = { workspace = true }
ordered-float          = { workspace = true }
parking_lot            = { workspace = true }
serde                  = { workspace = true }
tokio                  = { workspace = true }
tokio-util             = { workspace = true }
tracing                = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
