[package]
name                   = "yazi-scheduler"
description            = "Yazi task scheduler"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.2.2" }
yazi-config  = { path = "../yazi-config", version = "26.2.2" }
yazi-dds     = { path = "../yazi-dds", version = "26.2.2" }
yazi-fs      = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro   = { path = "../yazi-macro", version = "26.2.2" }
yazi-parser  = { path = "../yazi-parser", version = "26.2.2" }
yazi-plugin  = { path = "../yazi-plugin", version = "26.2.2" }
yazi-proxy   = { path = "../yazi-proxy", version = "26.2.2" }
yazi-shared  = { path = "../yazi-shared", version = "26.2.2" }
yazi-term    = { path = "../yazi-term", version = "26.2.2" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.2.2" }

# External dependencies
anyhow                 = { workspace = true }
async-priority-channel = "0.2.0"
foldhash               = { workspace = true }
hashbrown              = { workspace = true }
lru                    = { workspace = true }
mlua                   = { workspace = true }
ordered-float          = { workspace = true }
parking_lot            = { workspace = true }
serde                  = { workspace = true }
tokio                  = { workspace = true }
tokio-util             = { workspace = true }
tracing                = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
