[package]
name                   = "yazi-scheduler"
description            = "Yazi task scheduler"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.5.6" }
yazi-config  = { path = "../yazi-config", version = "26.5.6" }
yazi-dds     = { path = "../yazi-dds", version = "26.5.6" }
yazi-fs      = { path = "../yazi-fs", version = "26.5.6" }
yazi-macro   = { path = "../yazi-macro", version = "26.5.6" }
yazi-runner  = { path = "../yazi-runner", version = "26.5.6" }
yazi-shared  = { path = "../yazi-shared", version = "26.5.6" }
yazi-term    = { path = "../yazi-term", version = "26.5.6" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.5.6" }

# External dependencies
anyhow                 = { workspace = true }
async-priority-channel = "0.2.0"
foldhash               = { workspace = true }
hashbrown              = { workspace = true }
lru                    = { workspace = true }
mlua                   = { workspace = true }
ordered-float          = { workspace = true }
parking_lot            = { workspace = true }
serde                  = { workspace = true }
strum                  = { workspace = true }
tokio                  = { workspace = true }
tracing                = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
