[package]
name        = "yazi-sftp"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "AspectUnk", "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi SFTP client"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
bitflags    = { workspace = true }
parking_lot = { workspace = true }
russh       = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
typed-path  = { workspace = true }
