[package]
name                   = "yazi-sftp"
description            = "Yazi SFTP client"
authors                = [ "AspectUnk", "sxyazi <sxyazi@gmail.com>" ]
version.workspace      = true
edition.workspace      = true
license.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags    = { workspace = true }
parking_lot = { workspace = true }
russh       = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
typed-path  = { workspace = true }
